--- a/app/src/main/res/layout/activity_subir_contenido.xml
+++ b/app/src/main/res/layout/activity_subir_contenido.xml
@@ -13,4 +13,14 @@
         android:text="Subir Canción"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btnCrearAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnSubirCancion"
+        android:layout_marginTop="16dp"
+        android:text="Crear Álbum"
+        android:textAllCaps="false" />
+
+
 </RelativeLayout>
